cmake_policy           ( SET CMP0048 NEW )
cmake_minimum_required ( VERSION 3.20    )

project ( libdaisy )

set ( CMAKE_CXX_STANDARD            14 )
set ( CMAKE_CXX_STANDARD_REQUIRED   ON )
set ( CMAKE_C_STANDARD              11 )
set ( CMAKE_C_STANDARD_REQUIRED     ON )
set ( CMAKE_EXPORT_COMPILE_COMMANDS ON )

set ( MODULE_SOURCES
  src/sys/dma.c
  src/hid/audio.cpp
  src/sys/fatfs.cpp
  src/per/gpio.cpp
  src/per/rng.cpp
  src/per/sai.cpp
  src/per/sdmmc.cpp
  src/util/bsp_sd_diskio.c
  src/util/hal_map.c
  src/util/oled_fonts.c
  src/util/sd_diskio.c
  src/util/usbh_diskio.c
  src/util/unique_id.c
  src/sys/system_stm32h7xx.c
  src/usbd/usbd_cdc_if.c
  src/usbd/usbd_desc.c
  src/usbd/usbd_conf.c
  src/usbh/usbh_conf.c
  src/daisy_seed.cpp
  src/daisy_pod.cpp
  src/daisy_patch.cpp
  src/daisy_petal.cpp
  src/daisy_field.cpp
  src/daisy_versio.cpp
  src/daisy_legio.cpp
  src/daisy_patch_sm.cpp
  src/sys/system.cpp
  src/dev/sr_595.cpp
  src/dev/codec_ak4556.cpp
  src/dev/codec_pcm3060.cpp
  src/dev/codec_wm8731.cpp
  src/dev/lcd_hd44780.cpp
  src/hid/ctrl.cpp
  src/hid/encoder.cpp
  src/hid/gatein.cpp
  src/hid/led.cpp
  src/hid/parameter.cpp
  src/hid/rgb_led.cpp
  src/hid/switch.cpp
  src/hid/usb.cpp
  src/hid/usb_host.cpp
  src/hid/usb_midi.cpp
  src/hid/wavplayer.cpp
  src/hid/logger.cpp
  src/per/adc.cpp
  src/per/dac.cpp
  src/per/i2c.cpp
  src/per/qspi.cpp
  src/dev/sdram.cpp
  src/per/spi.cpp
  src/per/spiMultislave.cpp
  src/per/tim.cpp
  src/per/uart.cpp
  src/ui/AbstractMenu.cpp
  src/ui/FullScreenItemMenu.cpp
  src/ui/UI.cpp
  src/util/color.cpp
  src/util/WaveTableLoader.cpp
)

set ( DRIVER_SOURCES
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cec.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_comp.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cortex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dac.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dac_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dcmi.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dfsdm.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma2d.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dsi.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_eth.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_eth_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_exti.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_fdcan.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_gpio.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hash.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hash_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hcd.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hrtim.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hsem.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2s.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2s_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_irda.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_iwdg.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_jpeg.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_lptim.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mdios.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mdma.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mmc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mmc_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_msp_template.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_nand.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_nor.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_opamp.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_opamp_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_qspi.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ramecc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rng.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sai.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sai_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sdram.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_smartcard.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_smartcard_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_smbus.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spdifrx.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sram.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_swpmi.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_timebase_rtc_alarm_template.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_timebase_rtc_wakeup_template.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_timebase_tim_template.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_usart.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_usart_ex.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_wwdg.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_adc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_bdma.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_comp.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_crc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_dac.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_delayblock.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_dma.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_dma2d.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_exti.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_fmc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_gpio.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_hrtim.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_i2c.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_lptim.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_lpuart.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_mdma.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_opamp.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_pwr.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_rcc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_rng.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_rtc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_sdmmc.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_spi.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_swpmi.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_tim.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_usart.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_usb.c
  Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_utils.c
)

set ( MIDDLEWARES_SOURCES
  Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/usbd_cdc.c
  Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_core.c
  Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ctlreq.c
  Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ioreq.c
  Middlewares/ST/STM32_USB_Host_Library/Core/Src/usbh_core.c
  Middlewares/ST/STM32_USB_Host_Library/Core/Src/usbh_ctlreq.c
  Middlewares/ST/STM32_USB_Host_Library/Core/Src/usbh_ioreq.c
  Middlewares/ST/STM32_USB_Host_Library/Core/Src/usbh_pipes.c
  Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Src/usbh_msc_bot.c
  Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Src/usbh_msc_scsi.c
  Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Src/usbh_msc.c
  Middlewares/Third_Party/FatFs/src/diskio.c
  Middlewares/Third_Party/FatFs/src/ff.c
  Middlewares/Third_Party/FatFs/src/ff_gen_drv.c
)

add_library ( ${PROJECT_NAME} STATIC
  ${MODULE_SOURCES}
  ${DRIVER_SOURCES}
  ${MIDDLEWARES_SOURCES}
  core/startup_stm32h750xx.c
)

target_compile_options ( ${PROJECT_NAME} PUBLIC
  -Os
  -fvisibility=hidden
  $<$<COMPILE_LANGUAGE:CXX>:-fno-rtti>
  $<$<COMPILE_LANGUAGE:CXX>:-fno-exceptions>
  $<$<COMPILE_LANGUAGE:CXX>:-fno-unwind-tables>
  $<$<COMPILE_LANGUAGE:CXX>:-fvisibility-inlines-hidden>
)

target_include_directories ( ${PROJECT_NAME} PUBLIC
  Drivers/CMSIS/Include
  Drivers/CMSIS/Device/ST/STM32H7xx/Include
  Drivers/STM32H7xx_HAL_Driver/Inc
  Drivers/STM32H7xx_HAL_Driver/Inc/Legacy
  Middlewares/ST/STM32_USB_Device_Library/Core/Inc
  Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc
  Middlewares/ST/STM32_USB_Host_Library/Core/Inc
  Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Inc
  Middlewares/Third_Party/FatFs/src
  src
  src/sys
  src/usbd
  src/usbh
)
